@@ -28,7 +28,7 @@
 class GridClassKey {
 
     const VERSION = '1.0.1';
-    const RELEASE = 'beta2';
+    const RELEASE = 'beta3';
 
     /**
      * modX object
