@@ -1,0 +1,3 @@
+<?php
+require_once (dirname(dirname(__FILE__)) . '/staticgridcontainer.class.php');
+class StaticGridContainer_mysql extends StaticGridContainer {}
