@@ -1,0 +1,12 @@
+<?php
+$xpdo_meta_map['StaticGridContainer']= array (
+  'package' => 'gridclasskey',
+  'version' => '1.0',
+  'extends' => 'modStaticResource',
+  'fields' => 
+  array (
+  ),
+  'fieldMeta' => 
+  array (
+  ),
+);
