@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <model package="gridclasskey" version="1.0" baseClass="xPDOObject" platform="mysql" defaultEngine="MyISAM">
     <object class="GridContainer" extends="modResource" />
+    <object class="StaticGridContainer" extends="modStaticResource" />
 </model>
